integ-tests/tests/snapshots/parser__stray_cr__array_value.snap
---
source: integ-tests/tests/parser.rs
expression: error
---
error[unexpected]: 
  ┌─ array_value:1:7
  │
1 │ a = [  ]
  │        unexpected character '\r'


