integ-tests/tests/snapshots/parser__stray_cr__ml_basic.snap
---
source: integ-tests/tests/parser.rs
expression: error
---
error[invalid-char-in-string]: 
  ┌─ ml_basic:1:4
  │
1 │ """"""
  │     invalid character '\r' in string


