integ-tests/tests/snapshots/parser__stray_cr__ml_more_whitespace.snap
---
source: integ-tests/tests/parser.rs
expression: error
---
error[invalid-char-in-string]: 
  ┌─ ml_more_whitespace:1:6
  │
1 │ """    """
  │       invalid character '\r' in string


