integ-tests/tests/snapshots/parser__stray_cr__value_literal.snap
---
source: integ-tests/tests/parser.rs
expression: error
---
error[invalid-char-in-string]: 
  ┌─ value_literal:1:6
  │
1 │ a = ''
  │       invalid character '\r' in string


